--- a/Config/dcm_study/config_uniformity_singleinstance.json
+++ b/Config/dcm_study/config_uniformity_singleinstance.json
@@ -14,7 +14,8 @@
                 "perform_dome_correction": 0
             }
         }
-    }, 
+    },
+    "cfgformat": "20180910", 
     "comments": {
         "author": "Tim de Wit, Amsterdam UMC", 
         "creator": "Tim de Wit, Amsterdam UMC", 
